--- a/ACTIVITY II.HTML
+++ b/ACTIVITY II.HTML
@@ -8,7 +8,7 @@
 </head>
 <body>
           
-  <center> <h1><a href="Activity 1.html"></a>SIGN UP</h1>
+  <center> <h1><a href="index.html"></a>SIGN UP</h1>
  <br>
   <center> <img src="RNHS LOGO.png" alt="photo"width="120">
  <marquee><h2>ROSALES NATIONAL HIGH SCHOOL-SHS</h2></marquee>
